fixed id visibility

--- a/src/components/ProductInfo/ProductInfo.scss
+++ b/src/components/ProductInfo/ProductInfo.scss
@@ -252,6 +252,14 @@
       @include on-tablet {
         display: none;
       }
+
+      &--desktop {
+        display: none;
+
+        @include on-tablet {
+          display: block;
+        }
+      }
     }
   }
 
